# ChangeLog for x11-themes/gtk-engines-cleanice
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/gtk-engines-cleanice/ChangeLog,v 1.22 2007/02/21 22:47:59 jokey Exp $

  21 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  09 Oct 2006; Javier Villavicencio <the_paya@gentoo.org>
  gtk-engines-cleanice-2.4.0.ebuild:
  Keyworded ~x86-fbsd.

  17 Sep 2005; Aron Griffis <agriffis@gentoo.org>
  gtk-engines-cleanice-2.4.0.ebuild:
  Mark 2.4.0 stable on alpha

  11 Sep 2005; Rene Nussbaumer <killerfox@gentoo.org> ChangeLog:
  Stable on hppa.

  11 Sep 2005; Guy Martin <gmsoft@gentoo.org>
  gtk-engines-cleanice-2.4.0.ebuild:
  Stable on hppa.

  05 Sep 2005; Leonardo Boshell <leonardop@gentoo.org>
  gtk-engines-cleanice-0.8.5-r1.ebuild:
  Stable on x86.

  24 Aug 2005; Leonardo Boshell <leonardop@gentoo.org>
  gtk-engines-cleanice-0.8.5.ebuild, gtk-engines-cleanice-0.8.5-r1.ebuild:
  Use mirror:// in SRC_URI.

  23 Aug 2005; Aron Griffis <agriffis@gentoo.org>
  gtk-engines-cleanice-2.4.0.ebuild:
  stable on ia64

  22 Aug 2005; Luis Medinas <metalgod@gentoo.org>
  gtk-engines-cleanice-2.4.0.ebuild:
  Marked Stable on AMD64.

  19 Aug 2005; Michael Hanselmann <hansmi@gentoo.org>
  gtk-engines-cleanice-2.4.0.ebuild:
  Stable on ppc.

  16 Aug 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  gtk-engines-cleanice-2.4.0.ebuild:
  Stable on sparc

  15 Aug 2005; Leonardo Boshell <leonardop@gentoo.org>
  gtk-engines-cleanice-2.4.0.ebuild:
  Marking stable on x86 early, since previous versions have problems with
  deprecated widgets (bug #85731).

*gtk-engines-cleanice-2.4.0 (02 Aug 2005)

  02 Aug 2005; Leonardo Boshell <leonardop@gentoo.org>
  gtk-engines-cleanice-2.4.0.ebuild, files/cleanice-2-gtkrc:
  New version. Added 'static' USE flag.

  02 Aug 2005; Leonardo Boshell <leonardop@gentoo.org>
  gtk-engines-cleanice-1.2.7.ebuild: