@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/gtk-engines-cleanice/Attic/gtk-engines-cleanice-0.8.5-r1.ebuild,v 1.3 2005/09/05 14:57:14 leonardop Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/gtk-engines-cleanice/Attic/gtk-engines-cleanice-0.8.5-r1.ebuild,v 1.4 2007/08/13 22:06:27 dertobi123 Exp $
 
 MY_PN="gtk-cleanice-theme"
 MY_P=${MY_PN}-${PV}
@@ -10,7 +10,7 @@ HOMEPAGE="http://themes.freshmeat.net/"
 SRC_PATH="${PN:0:1}/${PN}/${PN}_${PV}.orig.tar.gz"
 SRC_URI="mirror://debian/pool/main/${SRC_PATH}"
 
-KEYWORDS="~alpha ~amd64 ~hppa ~ppc ~sparc x86"
+KEYWORDS="~alpha ~amd64 ~hppa ppc ~sparc x86"
 LICENSE="GPL-2"
 SLOT="1"
 IUSE="static"
