@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/gtk-engines-flat/Attic/gtk-engines-flat-0.1-r1.ebuild,v 1.3 2005/09/05 18:51:37 gustavoz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/gtk-engines-flat/Attic/gtk-engines-flat-0.1-r1.ebuild,v 1.4 2007/08/13 22:07:19 dertobi123 Exp $
 
 MY_PN="gtk-flat-theme"
 MY_P=${MY_PN}-${PV}
@@ -8,7 +8,7 @@ DESCRIPTION="Flat theme engine for GTK+ 1"
 HOMEPAGE="http://themes.freshmeat.net/projects/flat/"
 SRC_URI="http://download.freshmeat.net/themes/flat/flat-1.2.x.tar.gz"
 
-KEYWORDS="~alpha ~amd64 ~hppa ~ppc sparc x86"
+KEYWORDS="~alpha ~amd64 ~hppa ppc sparc x86"
 SLOT="1"
 LICENSE="GPL-2"
 IUSE="static"
