@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/gtk-engines-flat
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/gtk-engines-flat/ChangeLog,v 1.24 2007/07/11 03:10:58 leio Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/gtk-engines-flat/ChangeLog,v 1.25 2007/08/13 22:07:19 dertobi123 Exp $
+
+  13 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  gtk-engines-flat-0.1-r1.ebuild:
+  ppc. stable
 
   11 Jul 2007; Mart Raudsepp <leio@gentoo.org>
   -gtk-engines-flat-2.0-r1.ebuild, gtk-engines-flat-2.0-r2.ebuild:
