@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/gtk-engines-cleanice
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/gtk-engines-cleanice/ChangeLog,v 1.22 2007/02/21 22:47:59 jokey Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/gtk-engines-cleanice/ChangeLog,v 1.23 2007/08/13 22:06:27 dertobi123 Exp $
+
+  13 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  gtk-engines-cleanice-0.8.5-r1.ebuild:
+  ppc. stable
 
   21 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
   Redigest for Manifest2
